feat: Add Docker support and refactor verification logic
This commit introduces containerization via Docker and overhauls the core user verification flow for improved security, robustness, and clarity.

CI/CD & Docker:
- Implements a GitHub Actions workflow to automatically build and publish a Docker image to `ghcr.io` on pushes to the main branch.
- Adds a multi-stage `Dockerfile` to create an optimized runtime image for the .NET application.
- Includes `docker-compose.yml` and `docker-compose.build.yml` for simplified local development and deployment orchestration with a Redis service.
- Configures application and data paths in `appsettings.json` to work within the containerized environment.

Core Logic Refactoring:
- The verification process is re-engineered to use unique tokens for each quiz option, with the correct token's state stored in Redis.
- A user-specific status lock is now stored in Redis during a verification attempt to prevent duplicate workflows. On failure, this lock becomes a 1-minute "Cooldown" marker to mitigate brute-force attempts.
- Callback data is now structured as `<chatId>_<token>` and is parsed more robustly.
- The health-check command was changed from "Ping" to "/ping" for consistency.

Code Quality & Documentation:
- Adds comprehensive XML documentation (`<summary>`) to all public methods and classes in `TelegramService`, `VerificationService`, and the `Worker` class to clarify their roles.
- Enhances logging throughout the application to include specific, structured context like `UserId` and `ChatId`.
- Removes significant amounts of commented-out and unused legacy code for better maintainability.

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,8 +12,9 @@
   },
   "ConnectionStrings": {
     "Redis": "localhost:6379",
-    "Sqlite": "Data Source=TelegramVerificationBot.sqlite"
+    "Sqlite": "Data Source=/app/data/TelegramVerificationBot.sqlite"
   },
+  "QuizFilePath": "/app/data/quizzes.json",
   "RateLimiting": {
     "FixedWindow": {
       "StartVerificationLimit": 3,
