--- a/TelegramVerificationBot.csproj
+++ b/TelegramVerificationBot.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-TelegramVerificationBot-c7fe5108-7792-4bd8-b9be-871d7844d766</UserSecretsId>
+    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
 
   <ItemGroup>
