refactor: Overhaul Docker build, CI workflow, and code quality
This commit introduces a comprehensive set of improvements across the project, focusing on containerization, CI processes, and C# code modernization.

Key changes include:

Docker & CI/CD:
- Rewrote the Dockerfile to use a more efficient and secure multi-stage build, which now includes a non-root user for runtime.
- Simplified the GitHub Actions workflow by replacing the complex build matrix with a single, direct job for building and pushing the Docker image.
- Added a .dockerignore file to optimize the build context, reducing image size and build time.
- Updated docker-compose.yml to specify user permissions and add SELinux volume labels (:z) for enhanced security and compatibility.

Codebase Modernization:
- Refactored TelegramService using more precise pattern matching and extracted helper methods to improve readability and maintainability.
- Enhanced the responsiveness of VerificationService by processing join requests and message edits concurrently using Task.WhenAll.
- Updated Program.cs to use the modern .AddOptions().BindConfiguration() pattern and enabled the configuration binding source generator for improved performance.

Configuration:
- Added a quizzes.json file to provide example data for the quiz functionality.

--- a/TelegramVerificationBot.csproj
+++ b/TelegramVerificationBot.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-TelegramVerificationBot-c7fe5108-7792-4bd8-b9be-871d7844d766</UserSecretsId>
     <PublishSingleFile>true</PublishSingleFile>
+    <EnableConfigurationBindingGenerator>true</EnableConfigurationBindingGenerator>
   </PropertyGroup>
 
   <ItemGroup>
