--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,14 @@ services:
   tgverifbot:
     image: ghcr.io/opaimon/tgverifbot:main
     restart: unless-stopped
+    user: "${UID}:${GID}"
     environment:
       - TelegramSettings__BotToken=${TELEGRAM_BOT_TOKEN}
       - TelegramSettings__ApiId=${TELEGRAM_API_ID}
       - TelegramSettings__ApiHash=${TELEGRAM_API_HASH}
       - ConnectionStrings__Redis=redis:6379
     volumes:
-      - ./data:/app/data
+      - ./data:/app/data:z
     depends_on:
       - redis
 
@@ -18,4 +19,4 @@ services:
     image: "docker.io/library/redis:alpine"
     restart: unless-stopped
     volumes:
-      - ./redis-data:/data
+      - ./redis-data:/data:z
