feat(verification): overhaul verification logic with ROP and add user handling
Refactors the entire verification process using Railway-Oriented Programming (ROP) to create a more robust, testable, and clear workflow. This change replaces the previous 'VerificationService' with the enhanced 'VerificationService.ROP'.

Key changes include:
- Implemented a full ROP flow for both starting verification and handling callbacks, with dedicated success and failure paths.
- Replaced the default logging provider with Serilog for structured and file-based logging.
- Added a new feature to handle users who are directly added to a chat by other members. These users are now automatically restricted and prompted to verify.
- Enhanced Redis state management with more granular keys and TTLs for different states (e.g., verification expiration, message deletion delays), improving the reliability of timeout handling.
- Introduced new background jobs for atomic actions like restricting, banning, and deleting messages.
- Deleted the old 'VerificationService' and refactored unit tests to align with the new, more functional service structure.
- Updated VSCode debug configurations to streamline the development workflow.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,15 @@
             "name": ".NET Core Launch (Console)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-debug",
-            "program": "${workspaceFolder}/bin/Debug/net9.0/TelegramVerificationBot.dll",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/src/TelegramVerificationBot/bin/Debug/net9.0/TelegramVerificationBot.dll",
             "args": [],
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/src/TelegramVerificationBot",
             "console": "internalConsole",
-            "stopAtEntry": false
+            "stopAtEntry": false,
+            "env": {
+                "DOTNET_ENVIRONMENT": "Development"
+            }
         },
         {
             "name": ".NET Core Attach",
