--- a/src/TelegramVerificationBot/TelegramVerificationBot.csproj
+++ b/src/TelegramVerificationBot/TelegramVerificationBot.csproj
@@ -13,7 +13,11 @@
     <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.9.25" />
     <PackageReference Include="WTelegramBot" Version="9.2.0" />
+    <InternalsVisibleTo Include="TelegramVerificationBot.Tests" />
   </ItemGroup>
 </Project>
