--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,12 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build-debug",
+            "label": "build",
             "command": "dotnet",
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/TelegramVerificationBot.csproj",
+                "${workspaceFolder}/src/TelegramVerificationBot/TelegramVerificationBot.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -26,7 +26,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/TelegramVerificationBot.csproj",
+                "${workspaceFolder}/src/TelegramVerificationBot/TelegramVerificationBot.csproj",
                 "--configuration",
                 "Release",
                 "/property:GenerateFullPaths=true",
@@ -44,7 +44,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/TelegramVerificationBot.csproj",
+                "${workspaceFolder}/src/TelegramVerificationBot/TelegramVerificationBot.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -58,9 +58,9 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/TelegramVerificationBot.csproj"
+                "${workspaceFolder}/src/TelegramVerificationBot/TelegramVerificationBot.csproj"
             ],
-            "problemMatcher": []
+            "problemMatcher": "$msCompile"
         }
     ]
 }
