feat(dispatcher): refactor to TPL Dataflow task processing
This commit completely overhauls the task dispatching and processing system by replacing the simple `Channel`-based `FunctionalTaskDispatcher` with a more powerful and scalable implementation using TPL Dataflow.

This new architecture provides fine-grained control over concurrency, allowing for both fully parallel execution of independent jobs and keyed-serial execution for jobs that must be processed in order for a given entity (e.g., a specific user in a specific chat). This prevents race conditions and ensures stateful operations are handled reliably.

Key changes:

-   **TPL Dataflow Pipeline**:
    -   Introduced `DataflowTaskDispatcher`, a new `BackgroundService` that orchestrates a TPL Dataflow pipeline.
    -   Created a `DataflowPipelineBuilder` to construct a dynamic pipeline consisting of:
        -   A single `routerBlock` to inspect incoming jobs.
        -   A configurable number of "keyed serial shards" (`ActionBlock`) to process jobs that implement `IKeyedJob` sequentially based on their key.
        -   A single "general parallel block" (`ActionBlock`) to process all other jobs with maximum concurrency.
    -   The number of serial shards is now configurable via `appsettings.json`.

-   **Decoupled Job Processing**:
    -   Introduced a universal `IJob` interface with a `ProcessAsync` method.
    -   All job records now implement this interface, moving the execution logic from a centralized handler dictionary into the jobs themselves. This makes the system more modular and easier to extend.

-   **Service & Configuration Refinements**:
    -   Renamed `VerificationServiceROP` to `VerificationService` for clarity and simplicity.
    -   Updated `Program.cs` to register the new `DataflowTaskDispatcher` and its dependencies.
    -   Added a `System.Threading.Tasks.Dataflow` package dependency.
    -   Updated unit tests to reflect the service renaming.

--- a/src/TelegramVerificationBot/TelegramVerificationBot.csproj
+++ b/src/TelegramVerificationBot/TelegramVerificationBot.csproj
@@ -17,7 +17,16 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.9.25" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="9.0.10" />
     <PackageReference Include="WTelegramBot" Version="9.2.0" />
     <InternalsVisibleTo Include="TelegramVerificationBot.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="data\quizzes.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="data\" />
   </ItemGroup>
 </Project>
