--- a/src/TelegramVerificationBot/appsettings.json
+++ b/src/TelegramVerificationBot/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "TaskDispatcher": {
+    "TplDataflow": {
+      "WorkerCount": 32
+    }
+  },
   "PathSettings": {
     "LogPath": "/app/logs"
   },
