--- a/src/TelegramVerificationBot/TelegramVerificationBot.csproj
+++ b/src/TelegramVerificationBot/TelegramVerificationBot.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-TelegramVerificationBot-c7fe5108-7792-4bd8-b9be-871d7844d766</UserSecretsId>
@@ -11,14 +11,15 @@
 
   <ItemGroup>
     <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+    <PackageReference Include="RedisRateLimiting" Version="1.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-    <PackageReference Include="StackExchange.Redis" Version="2.9.25" />
-    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="9.0.10" />
-    <PackageReference Include="WTelegramBot" Version="9.2.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="10.0.0" />
+    <PackageReference Include="WTelegramBot" Version="9.2.1" />
     <InternalsVisibleTo Include="TelegramVerificationBot.Tests" />
   </ItemGroup>
 
